# spot_autonomy

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  git_pull.sh  manifest.xml
config/: clearpath_spot_config.yaml  enml.lua  highbeams.lua  joystick.lua  navigation.lua
config/graph_navigation/: navigation.sim.lua
config/robofleet_client/: config.hpp
config/websocket/: websocket_main.cc
joystick/: joystick_driver.cc  speaker_basic.py  speech.txt  spot_pitch_yaw.py
launch/: data_collection.launch  ldos_setgoal.sh  pointcloud2laser.launch  pointcloud2laser_high_beams.launch  pointcloud2laser_nodelet.launch  pointcloud2laser_nodelet_high_beams.launch  start_all.launch  start_all_example.xml  start_clearpath_spot.launch.example  start_spot_interface.launch.example  terrain_ganav.launch  terrain_nav_3t.launch  terrain_nav_6t.launch  terrain_nav_base.launch  test_js.launch  velodyne.launch
pointcloud_to_laserscan/: pointcloud_to_laserscan_main.cc
scripts/: .api_keys  bodypose.py  contingency_nn_image.py  demo_main.py  motion_replay.py  speaker_basic.py  speech.txt  spot_pitch_yaw.py  waypoint.py  waypoint_speech_tourguide.txt
scripts/objdet/: obj_online.py
scripts/objdet/coda/: bagdecoder_lidarimuonly.yaml  checkpoint_epoch_50.pth  da_coda32_oracle_dataset.yaml  pvrcnn_allclass32oracle_coda.yaml
scripts/objdet/pcdet/: config.py  version.py
scripts/objdet/pcdet/datasets/: dataset.py
scripts/objdet/pcdet/models/detectors/: detector3d_template.py  pv_rcnn.py
status_translator/: status_translator.cc
